# padam

./: .gitignore  LICENSE  README.md  pyproject.toml  pyproject.toml.old  test.scad
examples/: cabinet.py  frame.py  kitchen.yaml  panel.py  project.yaml  systainer_mobile_cart.py  systainer_mobile_cart.yaml
padam/: __main__.py  command.py  constants.py  default.py  project.py  utils.py
padam/freecad/: __init__.py  _get_paths.py
padam/parts/: __init__.py  base.py  cabinet.py  frame.py  panel.py
padam/projects/: cabinet.py  frame.py  panel.py  systainer_mobile_cart.py
requirements/: common.txt
tests/: test_command.py  test_project.py
tests/parts/: test_base.py  test_cabinet.py  test_frame.py  test_panel.py  test_utils.py
